Start adding basic welcome page

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,2 +1,18 @@
-%h1 Welcome#index
-%p Find me in app/views/welcome/index.html.haml
+%div.welcome-index
+  %div.intro-banner
+    %h1 Lighthouse
+    %h3 Find your next favorite movie.
+  %div.container
+    %div.row
+      %div.col-lg-4
+        %img.img-circle
+        %h2 Track your movies
+        %p Rate movies that you've seen.
+      %div.col-lg-4
+        %img.img-circle
+        %h2 Discover new flicks
+        %p Tell us what movies you like and we'll find more for you.
+      %div.col-lg-4
+        %img.img-circle
+        %h2 Keep up with your friends
+        %p Chat with your friends about the latest films.
