Add first bits of welcome page

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,7 +1,10 @@
 %div.welcome-index
   %div.intro-banner
-    %h1 Lighthouse
-    %h3 Find your next favorite movie.
+    %div.intro-text
+      %h1 Lighthouse
+      %h3 Find your next favorite movie.
+      %p
+        %a.btn.btn-lg.btn-primary Get Started
   %div.container
     %div.row
       %div.col-lg-4
