--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -7,5 +7,18 @@
     left: 20%;
     right: 20%;
     text-align: center;
+    color: white;
+    height: 70vh;
+    background-image: url(image_path("welcome.jpg"));
+    background-size: cover;
+  }
+
+  .intro-text {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    h1, h3 {
+      text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    }
   }
 }
