Simplify HAML and add basic search bar to the nav

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
-%div.navbar.navbar-default.navbar-fixed-top
-  %div.container
-    %div.navbar-header
+.navbar.navbar-default.navbar-fixed-top
+  .container
+    .navbar-header
       %a.navbar-brand Lighthouse
-    %div.collapse.navbar-collapse
-      %ul.nav.navbar-nav.navbar-right
+    %form.navbar-form.navbar-right
+      %input.form-control{placeholder: "Search for a film..."}
