--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,5 +1,5 @@
-%div.footer
-  %div.container
-    %div.row
-      %div.col-lg-12
+.footer
+  .container
+    .row
+      .col-lg-12
         %p.text-muted.small Copyright &copy; 2016 | Made in California with &hearts;
