--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,6 +1,6 @@
-%div.welcome-index
-  %div.intro-banner
-    %div.intro-text
+.welcome-index
+  .intro-banner
+    .intro-text
       %h1 Lighthouse
       %h3 Find your next favorite movie.
       %p
