--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,6 +3,4 @@
     .navbar-header
       %a.navbar-brand Lighthouse
     = form_tag(search_path, method: "get", class: "navbar-form navbar-right") do
-      = text_field_tag("query", nil, placeholder: "Search...", class: "navbar-form navbar-right")
-    -#%form.navbar-form.navbar-right{ action: search_path() }
-      -#%input.form-control{placeholder: "Search for a film..."}
+      = text_field_tag("query", nil, placeholder: "Search...", class: "form-control")
