Display movie description in search results

--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -5,4 +5,5 @@
         %p Found #{@movies.length} Results
         - @movies.each do |movie|
           %p= movie["title"]
+          %p= movie["description"]
 
