Display movie title and placeholder image

--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -1,2 +1,6 @@
-%h1 Movies#show
-%p Find me in app/views/movies/show.html.haml
+.container
+  .row
+    .col-lg-4
+      %img(src="http://placekitten.com/150/200")
+    .col-lg-8
+      .h1 #{@movie.title}
